--- a/order.html
+++ b/order.html
@@ -8,11 +8,9 @@
 </head>
 <body>
 
-  <div id="order-goods">
-    
-  </div>
+  <div id="order-goods"></div>
   <!-- #order-goods -->
   
-  <script src="js/levus-basket.js"></script>
+  <script src="js/levus-shop.js"></script>
 </body>
 </html>
