--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </section>
   <!-- #items -->
 
-<script src="js/levus-basket.js"></script>
+<script src="js/levus-shop.js"></script>
 </body>
 
 </html>
