--- a/order.html
+++ b/order.html
@@ -10,6 +10,8 @@
 
   <div id="order-goods"></div>
   <!-- #order-goods -->
+  <div id="order-sum"></div>
+  <!-- #order-sum -->
   
   <script src="js/levus-shop.js"></script>
 </body>
