--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="basket">
     <div>Товарів: <span id="basket-quantity">0</span> | На суму: <span id="basket-sum">0</span></div>
     <div id="basket-goods"></div>
-    <div><a href="order.html" id="basket-order">Оформити</a> | <span id="basket-clear">Видалити</span></div>
+    <div><a href="checkout.html" id="basket-order">Оформити</a> | <span id="basket-clear">Видалити</span></div>
   </div>
   <!-- #basket -->
 
