--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
 
 <body>
 
+
+  <aside id="basket-button"></aside>
+  <!-- #basket-button -->
+
   <div id="basket">
+    <div>Товарів: <span id="basket-quantity">0</span> | На суму: <span id="basket-sum">0</span></div>
+    <hr>
+    <div id="basket-goods"></div>
+    <hr>
+    <div><a href="checkout.html" id="basket-order" tabindex="1">Оформити</a> | <span id="basket-clear" tabindex="2">Видалити</span></div>
+  </div>
+  <!-- #basket -->
+
+  <!-- <div id="basket">
     <div>Товарів: <span id="basket-quantity">0</span> | На суму: <span id="basket-sum">0</span></div>
     <div id="basket-goods"></div>
     <div><a href="checkout.html" id="basket-order">Оформити</a> | <span id="basket-clear">Видалити</span></div>
-  </div>
+  </div> -->
   <!-- #basket -->
 
   <section id="items">
@@ -201,7 +214,7 @@
   </section>
   <!-- #items -->
 
-<script src="js/levus-shop.js"></script>
+<script src="js/levus-shop.oop.js"></script>
 </body>
 
 </html>
