--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <div id="basket">
     <div>Товарів: <span id="basket-quantity">0</span> | На суму: <span id="basket-sum">0</span></div>
-    <hr>
+    <!-- <hr> -->
     <div id="basket-goods"></div>
-    <hr>
+    <!-- <hr> -->
     <div><a href="checkout.html" id="basket-order" tabindex="1">Оформити</a> | <span id="basket-clear" tabindex="2">Видалити</span></div>
   </div>
   <!-- #basket -->
@@ -214,7 +214,7 @@
   </section>
   <!-- #items -->
 
-<script src="js/levus-shop.oop.js"></script>
+<script src="js/levus-shop.js"></script>
 </body>
 
 </html>
