--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+  <aside id="basket-button"></aside>
+  <!-- #basket-button -->
+
+  <div id="basket">
+    <div>Товарів: <span id="basket-quantity">0</span> | На суму: <span id="basket-sum">0</span></div>
+    <!-- <hr> -->
+    <div id="basket-goods"></div>
+    <!-- <hr> -->
+    <div><a href="checkout.html" id="basket-order" tabindex="1">Оформити</a> | <span id="basket-clear" tabindex="2">Видалити</span></div>
+  </div>
+  <!-- #basket -->
+
   <div id="order-goods"></div>
   <div id="order-sum"></div>
   
