--- a/checkout.html
+++ b/checkout.html
@@ -22,6 +22,7 @@
 
   <div id="order-goods"></div>
   <div id="order-sum"></div>
+  <div id="order-form"></div>
   
   <script src="js/levus-shop.js"></script>
 </body>
